src/test/ui/impl-trait/issues/universal-issue-48703.stderr
error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/universal-issue-48703.rs:8:5
   |
LL |     foo::<String>('a');
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

